--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,5 +109,8 @@ dependencies {
     implementation "io.github.raamcosta.compose-destinations:core:$destination_version"
     ksp "io.github.raamcosta.compose-destinations:ksp:$destination_version"
 
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+
+
 
 }
