add actions in notification

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,10 @@
             </intent-filter>
         </service>
 
+        <receiver android:name=".service.MarkAsReadBroadcastReceiver"
+            android:exported="false"
+            />
+
     </application>
 
 </manifest>
