--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,7 +107,7 @@ dependencies {
     implementation "com.google.accompanist:accompanist-permissions:$accompanist_version"
 
     // wrapper around jetpack navigation compose
-    implementation "io.github.raamcosta.compose-destinations:core:$destination_version"
+    implementation "io.github.raamcosta.compose-destinations:animations-core:$destination_version"
     ksp "io.github.raamcosta.compose-destinations:ksp:$destination_version"
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
