--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,14 @@ plugins {
     id 'com.google.gms.google-services'
     id 'com.google.devtools.ksp'
     id 'kotlin-parcelize'
+    id "io.sentry.android.gradle"
+
+}
+
+
+def secret = new Properties()
+file("../secret.properties").withInputStream {
+    secret.load(it)
 }
 
 android {
@@ -33,6 +41,8 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
+        resValue "string", "SENTRY_DSN", secret.getProperty("sentry_dsn")
     }
 
     buildTypes {
