--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,14 @@
         android:theme="@style/Theme.Notify"
         android:name=".NotifyApplication"
         tools:targetApi="31">
+
+        <meta-data android:name="io.sentry.dsn" android:value="@string/SENTRY_DSN" />
+        <!-- Set tracesSampleRate to 1.0 to capture 100% of transactions for performance monitoring.
+           We recommend adjusting this value in production. -->
+        <meta-data android:name="io.sentry.traces.sample-rate" android:value="1.0" />
+        <!-- Enable user interaction tracing to capture transactions for various UI events (such as clicks or scrolls). -->
+        <meta-data android:name="io.sentry.traces.user-interaction.enable" android:value="true" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
