--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ buildscript {
 
         compose_version = '1.1.1'
 
+        sentry_version = "3.3.0"
+
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
@@ -29,6 +31,9 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
     id 'com.google.gms.google-services' version "4.3.14" apply false
     id "com.google.devtools.ksp" version "$ksp_version" apply false
+
+    id "io.sentry.android.gradle" version "$sentry_version" apply false
+
 
 
 }
